[package]
name = "aspect-wasm-runtime"
version = "0.1.0"
edition = "2021"
description = "A library for instrumenting WebAssembly binaries on Artela"
license = "MIT"

[dependencies]
wasm-instrument = { version = "0.4.0", features = ["std", "sign_ext"] }
parity-wasm = { version = "0.45", features = ["std", "sign_ext"] }
anyhow = "1.0"
slog = { version = "2.7.0", features = [
    "release_max_level_trace",
    "max_level_trace",
] }
wasmprinter = "0.2.0"
lazy_static = "1.4.0"
wasmtime-c-api = { version = "20.0.0", package = "wasmtime-c-api-impl", features = ["wasi", "async", "cache", "parallel-compilation", "logging", "threads", "gc", "wat"] }

[lib]
name = "aspect_wasm_runtime"
crate-type = ["cdylib", "staticlib", "rlib"]